# vgs-api-client-python

./: .apigentools-info  .flake8  README.md  RELEASE.md  docker-compose.publish.yaml  docker-compose.test.yaml  docker-compose.yaml  publish.sh  pyproject.toml  run-test.sh  setup.cfg  setup.py
.circleci/: config.yml
.openapi-generator/: FILES
docker/: Dockerfile.test  build_and_publish.sh
docs/: AliasFormat.md  AliasesApi.md  CreateAliasesRequest.md  CreateAliasesRequestExisting.md  InlineResponseDefault.md
examples/functions/: compare_secret_values.py  compute_average.py  hash.py  soundex.py  store_value.py
publish/: Dockerfile  build_and_publish.sh
scripts/: publish.sh  reformat.sh  run-tests-e2e.sh  run-tests.sh
scripts/assemble/: Dockerfile  run.sh
scripts/lint/: Dockerfile  run.sh
scripts/publish/: Dockerfile  run.sh
scripts/reformat/: Dockerfile  run.sh
scripts/test/: Dockerfile  run.sh
scripts/test-e2e/: Dockerfile  run.sh
src/v1/: README.md  setup.py
src/vgs/: __init__.py  aliases_api.py  base_api.py  configuration.py  exceptions.py  functions_api.py
src/vgs_api_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
test/: Dockerfile  test_api.py  test_api_error.py  test_create_aliases_request.py  test_update_alias_request_data.py
tests/: test-requirements.txt  test_aliases_api.py  test_functons_api.py  test_tokenization_api.py
tests/sdk/: accounts-get-by-id-response.json  routes-error-on-put.json  routes-list-response.json  routes-put-request.json  routes-put-response.json  testTnt_fcoRoutes.yml  test_accounts_api.py  test_api.py  test_routes.py  test_serializers.py  test_utils.py  tntavi5wvp3.routes.yml
tests/v1/: Dockerfile  run_tests.sh
tests/vgs/: test_aliases_api.py  test_base_api.py  test_functons_api.py
v1/: .gitlab-ci.yml  .travis.yml  README.md  docker-compose.yaml  git_push.sh  setup.py
v1/.openapi-generator/: FILES
v1/docker/: build_and_publish.sh
v1/docs/: Alias.md  CreateAliasesRequest.md  CreateAliasesRequestNew.md  RevealedData.md
v1/test/: test_alias.py  test_alias_format.py  test_aliases_api.py  test_create_aliases_request.py  test_create_aliases_request_existing.py  test_create_aliases_request_new.py  test_inline_response200.py  test_inline_response2001.py  test_inline_response201.py  test_inline_response_default.py  test_revealed_data.py  test_update_alias_request.py
v1/vgs_api_client/: __init__.py  api_client.py  configuration.py  model_utils.py
vgs/: __init__.py
vgs_api_client/: __init__.py  api_client.py  configuration.py  rest.py
vgs_api_client/model/: alias.py  alias_format.py  (+11 more)
(+67 files in other folders)
