[metadata]
name = vgs-api-client
description = VGS API Client
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    openapi
    api
    client
    vgs
    VeryGoodSecurity
author = Very Good Security
author_email = support@verygoodsecurity.com
url = https://github.com/verygoodsecurity/vgs-api-client-python
license = BSD
platforms = any
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/verygoodsecurity/vgs-api-client-python/issues
    Documentation = https://www.verygoodsecurity.com/docs/
    Source Code = https://github.com/verygoodsecurity/vgs-api-client-python

[options]
package_dir=
    =src
packages=find:

include_package_data = True
python_requires = >=3.7
install_requires =
    setuptools >= 30.3.0
    python_dateutil >= 2.5.3
    urllib3 >= 1.25.3

[options.packages.find]
where=src
exclude = tests

[flake8]
max-line-length = 99
