[metadata]
name = vgs-api-client
description = VGS API Client
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    openapi
    api
    client
    vgs
    VeryGoodSecurity
author = Very Good Security
author_email = support@verygoodsecurity.com
url = https://github.com/verygoodsecurity/vgs-api-client-python
license = BSD
platforms = any
classifiers=
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/verygoodsecurity/vgs-api-client-python/issues
    Documentation = https://www.verygoodsecurity.com/docs/
    Source Code = https://github.com/verygoodsecurity/vgs-api-client-python

[options]
package_dir=
    =src
packages=find:

include_package_data = True

python_requires = >=3.7
install_requires =
    setuptools == 62.3.3
    python_dateutil == 2.8.2
    urllib3 == 1.26.7
    aiohttp == 3.8.1
    vgs-cli >= 1.14.3
    requests == 2.26.0
    textwrap3 == 0.9.2

[options.packages.find]
where=src
exclude = tests

[options.package_data]
vgs.certs =
    *.pem

[flake8]
max-line-length = 99
